--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -16,8 +16,8 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm install
-      - name: Build
-        run: npm run build
       - name: Run semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
         run: npx semantic-release
     
