--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   main:
     runs-on: ubuntu-latest
+    environment: 
+      name: Semver
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v4
@@ -18,6 +20,6 @@ jobs:
         run: npm install
       - name: Run semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GH_TOKEN: ${{ secrets.TOKEN }}
         run: npx semantic-release
     
