--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -12,14 +12,20 @@ jobs:
     environment: 
       name: Semver
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          # You can specify specifying version range for the extra plugins if you prefer.
+          extra_plugins: |
+            @semantic-release/changelog@6.0.0
+            @semantic-release/git
       - uses: actions/setup-node@v4
         with:
           node-version: 20
       - name: Install dependencies
         run: npm install
-      - name: Run semantic-release
-        env:
-          GH_TOKEN: ${{ secrets.TOKEN }}
-        run: npx semantic-release
     
