--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   main:
     runs-on: ubuntu-latest
-    environment: 
+    environment:
       name: Semver
     steps:
       - name: Checkout
@@ -17,7 +17,7 @@ jobs:
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           # You can specify specifying version range for the extra plugins if you prefer.
           extra_plugins: |
