--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
         env:
