--- a/.releaserc
+++ b/.releaserc
@@ -1,3 +1,26 @@
 {
-  "branches": ["master", "dev"]
+    "branches": [
+        "master",
+        "dev"
+    ],
+    "plugins": [
+        "@semantic-release/commit-analyzer",
+        "@semantic-release/release-notes-generator",
+        [
+            "@semantic-release/changelog",
+            {
+                "changelogFile": "CHANGELOG.md"
+            }
+        ],
+        [
+            "@semantic-release/git",
+            {
+                "assets": [
+                    "CHANGELOG.md"
+                ]
+            }
+        ],
+        "@semantic-release/github"
+        
+    ]
 }
